<resources>
    <string name="title_activity_show">Отчёт из истории</string>
    <string name="title_activity_history">История</string>
    <string name="title_activity_main">Сканирование</string>
    <color name="bg_green">#00B000</color>
    <color name="bg_main">#FFFFFF</color>
    <color name="white">#FFFFFF</color>
    <string name="app_name">SberSbor</string>
    <string name="action_settings">Settings</string>
    <string name="main_button_scan_text">Сканировать</string>
    <string name="main_button_history_text">История</string>
    <string name="main_button_test_text">Тестирование</string>
    <string name="main_button_send_text">Отправить</string>
    <string name="main_button_save_text">Сохранить</string>
    <string name="network_signal_title_text">Сигнал</string>
    <string name="network_address_title_text">IP Адрес</string>
    <string name="network_channel_title_text">Канал</string>
    <string name="history_item_create_date_text">Дата:</string>
    <string name="history_item_create_time_text">Время:</string>
    <string name="show_button_send_text">Отправить</string>
    <string name="start_test_button_tooltip">Начать тестирование</string>
    <string name="start">start</string>
    <string name="title_activity_login">Вход</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Здравствуйте !"</string>
    <string name="invalid_username">Некорректный email</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Ошибка входа"</string>
    <string name="upload_speed_text">Скорость назад</string>
    <string name="download_speed_text">Скорость взад</string>
    <string name="title_activity_test">Проверка сети</string>
    <string name="clear_history_text">Очистить историю</string>
</resources>
