<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/network_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:maxLines='1'
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="WiFi богов" />

    <TextView
        android:id="@+id/network_signal_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:maxLines='1'
        android:text="@string/network_signal_title_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/network_address_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_name"
        tools:text="Сигнал:" />

    <TextView
        android:id="@+id/network_address_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:maxLines='1'
        android:text="@string/network_address_title_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/network_channel_title"
        app:layout_constraintStart_toEndOf="@+id/network_signal_title"
        app:layout_constraintTop_toBottomOf="@+id/network_name"
        tools:text="IP адрес:" />

    <TextView
        android:id="@+id/network_channel_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:maxLines='1'
        android:text="@string/network_channel_title_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/network_address_title"
        app:layout_constraintTop_toBottomOf="@+id/network_name"
        tools:text="Канал:" />

    <TextView
        android:id="@+id/network_signal_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:maxLines='1'
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/network_address_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_signal_title"
        tools:text="Огонь!" />

    <TextView
        android:id="@+id/network_address_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:maxLines='1'
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/network_channel_value"
        app:layout_constraintStart_toEndOf="@+id/network_signal_value"
        app:layout_constraintTop_toBottomOf="@+id/network_address_title"
        tools:text="Чётенький!" />

    <TextView
        android:id="@+id/network_channel_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:maxLines='1'
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/network_address_value"
        app:layout_constraintTop_toBottomOf="@+id/network_channel_title"
        tools:text="Телевизионный!" />

</android.support.constraint.ConstraintLayout>